--- a/Konferencja/Web.config
+++ b/Konferencja/Web.config
@@ -24,6 +24,7 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+  <globalization requestEncoding="utf-8" responseEncoding="utf-8" />
   </system.web>
   <system.webServer>
     <modules>
