Zmiany w panelu zarządzania publikacjami użytkownika

--- a/Konferencja/Konferencja.csproj
+++ b/Konferencja/Konferencja.csproj
@@ -225,6 +225,10 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\person.png" />
+    <Content Include="Content\Images\x_logo.png" />
+    <Content Include="Content\Images\y_logo.png" />
+    <Content Include="Content\Images\z_logo.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -236,8 +240,9 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="Properties\PublishProfiles\Konferencja - Web Deploy %282%29.pubxml" />
-    <None Include="Properties\PublishProfiles\Konferencja - Web Deploy.pubxml" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
+    <None Include="Properties\PublishProfiles\Konferencje - Web Deploy %282%29.pubxml" />
+    <None Include="Properties\PublishProfiles\Konferencje - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -250,6 +255,7 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="test.txt" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
