--- a/Konferencja/Konferencja.csproj
+++ b/Konferencja/Konferencja.csproj
@@ -256,6 +256,7 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="test.txt" />
+    <Content Include="TODO.txt" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
