--- a/Konferencja/Konferencja.csproj
+++ b/Konferencja/Konferencja.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Mail.cs" />
     <Compile Include="Migrations\201604011634389_Init.cs" />
     <Compile Include="Migrations\201604011634389_Init.Designer.cs">
       <DependentUpon>201604011634389_Init.cs</DependentUpon>
